ini label baru udah di up

--- a/src/main/java/com/mycompany/pokemonneatbens/HomeBaseGUI.form
+++ b/src/main/java/com/mycompany/pokemonneatbens/HomeBaseGUI.form
@@ -58,7 +58,7 @@
     <Component class="javax.swing.JButton" name="ToUsserIn3">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/SRC/HomeBase/Dungeon.png"/>
+          <Image iconType="3" name="/SRC/HomeBase/ChestMonster.png"/>
         </Property>
       </Properties>
       <Events>
@@ -66,7 +66,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="270" y="830" width="270" height="60"/>
+          <AbsoluteConstraints x="400" y="750" width="270" height="60"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -97,6 +97,21 @@
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="560" y="910" width="270" height="60"/>
+        </Constraint>
+      </Constraints>
+    </Component>
+    <Component class="javax.swing.JButton" name="ToUsserIn6">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/SRC/HomeBase/Dungeon.png"/>
+        </Property>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ToUsserIn6ActionPerformed"/>
+      </Events>
+      <Constraints>
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+          <AbsoluteConstraints x="270" y="830" width="270" height="60"/>
         </Constraint>
       </Constraints>
     </Component>
